cluster/apps/files/seaweed/app/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seaweed
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: seaweed
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8333
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-public-networking
      ports:
        - port: 23646
          protocol: TCP
